# rust-omfiles

./: Cargo.toml  README.md  codecov.yaml
.github/: dependabot.yml
.github/workflows/: tests.yml
benches/: om_benchmark.rs
src/: errors.rs  lib.rs  reader.rs  reader_async.rs  traits.rs  variable.rs  writer.rs
src/backend/: backends.rs  mmapfile.rs
src/backends/: file.rs  io_uring.rs  memory.rs  mmapfile.rs
src/core/: c_defaults.rs  compression.rs  data_types.rs
src/io/: buffered_writer.rs  reader.rs  reader_async.rs  reader_async_io_uring.rs  reader_utils.rs  tree_navigator.rs  variable.rs  variable_impl.rs  wrapped_decoder.rs  writer.rs
src/utils/: buffered_writer.rs  byte_range.rs  reader_utils.rs  wrapped_decoder.rs
tests/: errors.rs  io_uring_tests.rs  omfiles_tests.rs
tests/test_utils/: mod.rs
