[package]
name = "omfiles"
version = "0.1.0"
description = "A Rust library for reading and writing Open-Meteo files"
edition = "2024"
license = "GPL-2.0-only"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

# some optimizations for binary/library size in release builds
# compare: https://github.com/johnthagen/min-sized-rust
# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "s" # Optimize for size.
# # lto = true      # Enable link-time optimization.
# codegen-units = 1 # Number of codegen units to use.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.7"
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "8aaaeb7d4c043da71935f4a6fea26f930db1ea5c" }
ndarray = "0.16.1"
num-traits = "0.2.19"
thiserror = "2.0.12"
async-lock = "3.4.1"
async-executor = "1.13.2"

[dev-dependencies]
criterion = "0.7"
rand = "0.9"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"

[[bench]]
name = "om_benchmark"
harness = false
