[package]
name = "omfiles"
version = "0.1.0"
description = "A Rust library for reading and writing Open-Meteo files"
edition = "2024"
license = "GPL-2.0-only"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

# some optimizations for binary/library size in release builds
# compare: https://github.com/johnthagen/min-sized-rust
# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "s" # Optimize for size.
# # lto = true      # Enable link-time optimization.
# codegen-units = 1 # Number of codegen units to use.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.9"
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "9feec4b8f01fee2843ddb940ddc4dd92b2981437" }
ndarray = "0.17.2"
num-traits = "0.2.19"
thiserror = "2.0.18"
async-lock = "3.4.2"
async-executor = "1.13.3"

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"

[[bench]]
name = "om_benchmark"
harness = false

[features]
metadata-tree = []

[package.metadata.docs.rs]
all-features = true
